add table with information about experiment data

--- a/articles/er-evaluation-models/algebraic.tex
+++ b/articles/er-evaluation-models/algebraic.tex
@@ -262,7 +262,7 @@ The maximum value of this measure is 1 and indicates ideal precision and ideal
 recall.
 
 Similarly to their pairwise counterparts, we also have cluster metrics: cluster
-precision, cluster recall and cluster comparison measure (or CF1).
+precision, cluster recall and cluster comparison measure (or $CF_1$).
 
 The cluster precision, $CP:Res^2\rightarrow~\left[0,1\right]$ is the ratio
 between the number of identical clusters between the entity resolution output
