--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -5,6 +5,7 @@
 \usepackage{algorithmic}
 \usepackage{balance}
 \usepackage{booktabs}
+\usepackage{multirow}
 \usepackage[caption=false,font=normalsize,labelfont=sf,textfont=sf]{subfig}
 \usepackage{enumitem}
 \usepackage{hyperref}
