--- a/articles/er-evaluation-models/research-questions.tex
+++ b/articles/er-evaluation-models/research-questions.tex
@@ -53,8 +53,8 @@ model itself rather than in reality, the data provided to the computer or the
 entity resolution solution.
 These conditions might be abstract, but they might also provide valuable
 insight to the human observer that analyses an entity resolution outcome.
-Our first goal is to find out whether such invariant conditions might actually
-exist.
+Our \textbf{first goal is to find out whether such invariant conditions might
+actually exist}.
 
 Next, another gap presents itself between the generic solutions provided by
 scientific literature or programming libraries and the specific needs derived
@@ -95,9 +95,9 @@ All this goes to show that the myriad ways~\cite{hitesh2012} in which we
 evaluate entity resolution quality suggests that we haven't found the ideal
 perspective for the entity resolution problem.
 It might also show that it will take us a long time to find it.
-From this point of view, it seems logical to look at how some of the existing
-metrics might complement one another to enhance our view over an entity
-resolution result.
+From this point of view, it seems logical to look at \textbf{how some of the
+existing metrics might complement one another to enhance our view over an entity
+resolution result}.
 
 As previously stated, entity resolution quality evaluation owes much to
 information retrieval and to probability theory.
@@ -120,5 +120,6 @@ On the other hand, entity resolution models\cite{Ben2009Swoosh,Tal11,fs1969}
 provide us with the abstract perspective.
 We interpret this to mean that certain metrics are linked to certain entity
 resolution models.
-With this view in mind, our final question is whether it's possible to interpret
-the same entity resolution result using two different entity resolution models.
+With this view in mind, our final question is \textbf{whether it's possible to
+interpret the same entity resolution result using two different entity
+resolution models}.
