Rename 'Ideal Mapping Size' to 'Ground Truth Size'

--- a/articles/er-evaluation-models/experiments.tex
+++ b/articles/er-evaluation-models/experiments.tex
@@ -54,7 +54,7 @@ outcome. All experiment datasets are available on GitHub\cite{expdata2023}.
     \centering
     \begin{tabular}{|l|l|l|c|c|c|}
         \bottomrule
-        \multicolumn{3}{|l|}{\textbf{General Information}} & \multicolumn{2}{|c|}{\textbf{Size}} & \multirow{2}{*}{\textbf{Ideal Mapping Size}}\\
+        \multicolumn{3}{|l|}{\textbf{General Information}} & \multicolumn{2}{|c|}{\textbf{Size}} & \multirow{2}{*}{\textbf{Ground Truth Size}}\\
         \cline{0-4}
         \textit{Domain} & \textit{Mapping Columns} & \textit{Sources} & \textit{Source 1} & \textit{Source 2} & \\
         \hline
