--- a/articles/er-evaluation-models/convert.tex
+++ b/articles/er-evaluation-models/convert.tex
@@ -1,5 +1,5 @@
 
-As stated in Subection~\ref{subsec:fsm}, one of the misgivings of the Fellegi-Sunter model is that
+As stated in Subection~\ref{subsec:Fellegi-Sunter Model}, one of the misgivings of the Fellegi-Sunter model is that
 it captures relatively well the matching aspect of entity resolution without
 doing as good a job for its clustering aspect.
 The algebraic model allows a more complete perspective over how entity
