--- a/articles/er-evaluation-models/formalization.tex
+++ b/articles/er-evaluation-models/formalization.tex
@@ -4,7 +4,7 @@ different steps~\cite{Pap19,Tal11}:
 \begin{itemize}
     \item \textit{entity reference extraction} --- the first phase of entity
     resolution deals with extracting entity references from input data
-    sources, as detailed in Section~\ref{sec:terminology};
+    sources, as detailed in Section~\ref{sec:Terminology};
     \item \textit{blocking} and \textit{filtering} --- at this stage, the
     entity resolution task groups in the same `block' entities that share
     similar traits and then within each block all entities that cannot
@@ -19,7 +19,7 @@ different steps~\cite{Pap19,Tal11}:
 
 We start our journey into the formalization of entity resolution with
 formalizing entity reference extraction using the notions from
-Section~\ref{sec:terminology}.
+Section~\ref{sec:Terminology}.
 
 Given:
 \begin{itemize}
